--- a/src/styles/updatedPortfolio.scss
+++ b/src/styles/updatedPortfolio.scss
@@ -1,5 +1,4 @@
 
-
 body {
   padding: 0px 0px 0px;
   background-color: #1982A1 ;
@@ -20,14 +19,7 @@ justify-content: center;
   position: relative;
 }
 
-.animated-avatar-wrapper {
-// right: 0;
-// top: -60px;
-// transform: scale(1) ;
-// position: absolute;
-// width: 10vw;
-//  border: 4px solid red;
-}
+
 
 .contact:hover  #avatar-body  {
   display:flex;
@@ -86,9 +78,27 @@ z-index: -1;
   transform: rotate3d(0);
 }
 
+@media screen and (max-width: 600px) {
+  .card {
+ scale: (1);
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .card {
+ scale: (.9);
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .card {
+ scale: (0.75);
+  }
+}
+
 .card {
   // padding: 1em;
-
+ 
   color: #181a1a;
    width: 346px;
   height: 480px;
@@ -104,7 +114,8 @@ z-index: -1;
 
 .card:hover {
   transition-duration: 200ms;
-  box-shadow: 0 10px 20px 5px #00000044;
+  box-shadow: 0 10px 10px 2px #00000044;
+  
 }
 
 .card .glow {
@@ -118,17 +129,17 @@ z-index: -1;
   background-image: radial-gradient(circle at 50% -20%, #ffffff22, #0000000f);
 }
 
-#topLayer {
-   height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+// #topLayer {
+//    height: 100vh;
+//   width: 100vw;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
 
 .card-main {
   perspective:1400px;
-  
+
 }
 
 .scene {
@@ -144,29 +155,46 @@ z-index: -1;
   perspective: 1400px;
 }
 
+.e6_41 a {
+  // position: absolute;
+  // z-index: 3;
+  transform-style: flat
+}
+
 .cardF {
    width: 346px;
   height: 480px;
-  
+
   cursor: pointer;
   position: relative;
 }
 
 .cardF.is-flipped {
-  transform: rotateY(180deg);
-  transition: transform 1s;
-  transform-style: preserve-3d;
-}
-
-.un-flipped {
-  transform: rotateY(360deg);
-  transition: transform 1s;
+ transform: rotateY(180deg);
+  transition: transform 2s;
   transform-style: preserve-3d;
   backface-visibility: visible;
+  animation-delay: 1000;
+// animation: dismissCard 2s ease-in-out 1 normal forwards;  
+}
+
+
+
+.un-flipped {
+  transform: rotateY(0deg);
+  transition: transform 1.5s;
+  // overflow: visible !important;
+  backface-visibility: visible;
+    -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+ 
+// animation: dismissCard2 1s ease-in-out  1 normal forwards;  
+
 }
 
 .cardF__face {
-  
+  transform: translateZ(1px);
+   -webkit-transform: translateZ(1px);
   position: absolute;
    width: 346px;
   height: 480px;
@@ -177,26 +205,23 @@ z-index: -1;
   // font-size: 40px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+
 }
 
-.cardF__face--front {
-  
-  background: transparent
-}
 
 .cardF__face--back {
-  
+ transform: translateZ(1px);
+   -webkit-transform: translateZ(1px);
     box-sizing: border-box;
   width: 346px;
-  // height: 480px;
+  height: 480px;
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: cover;
   background-color: none;
   border-radius: 4.55% / 3.5%;
       background-image: url(../assets/images/project-card-back.webp);
-  transform: rotateY(-180deg);
-  // transform: rotate3d(0);
+  transform: rotateY(180deg);
   z-index: 1;
 }
 
@@ -354,7 +379,7 @@ z-index: -1;
 	// top:293px;
   font-family:Gill Sans;
 	text-align:left;
-	font-size:10px;
+	font-size:11.5px;
 	line-height: 1.2em;
 }
 .e6_49 { 
@@ -375,7 +400,7 @@ z-index: -1;
   word-wrap: normal;
 	font-family:Gill Sans;
 	text-align:left;
-	font-size:10px;
+	font-size:11.3px;
 	// letter-spacing:1;
   line-height: 1.2em;
 }
@@ -667,96 +692,18 @@ animation: hide .5s ease-in-out  1 reverse forwards;
  
 }
 
-// @keyframes hide {
-  
-//   100% {
 
-//     //     position: absolute;    
-//     // width: 0;
-//     // height: 0;
-//     // margin: 0; 
-    
-//   }
-// }
-// @keyframes show {
-//   0%{
-//     // position: absolute;   
-//     // width: 0;
-//     // height: 0;
-//     // margin: 0;   
-//   }
-//   100% {
-     
-//   }
-// }
 
 html {  
-  --value: -1500;
-  --width: calc(var(--value) * -1 * 1px);
-  --distance: calc(var(--value) * .98 * 1px);
-  --perspective: calc(var(--value) * -2 * 1px);
-  --angle: calc(var(--value) / 80 * 1deg);
+  --value: -1000;
+  --width: calc(var(--value) * -2 * 1px);
+  --distance: calc(var(--value) * 1.45 * 1px);
+  --perspective: calc(var(--value) * -3 * 1px);
+  --angle: calc(var(--value) / 50 * 1deg);
   // --zoom: 2;
-  --active-translate-modifier: .6;
+  --active-translate-modifier: 0.1;
   --vertical-offset: -0px;
   // font-family: 'Segoe UI'
-}
-
-.scroll-button-wrapper {
-    padding-bottom: 40px;
-  display: flex;
-flex-direction: row;
-justify-content: center;
-  position: relative;
-  z-index: 1;
-}
-
-button.prev  {
-  cursor: pointer;
-background-image: url(../assets/images/arrow1.png);
-height: 40px;
-width: 40px;
-margin: 0 15px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: contain;
-border: none;
-background-color: transparent;
-transform: rotate(180deg);
-}
-
-button.prev:hover {
-transform: scale(1.2) rotate(180deg )
-}
-
-button.prev:active{
-background-image: url(../assets/images/arrow2.png);
-transform: scale(1.1) rotate(180deg ) 
-}
-
-
-
-button.next  {
-  cursor: pointer;
-background-image: url(../assets/images/arrow1.png);
-height: 40px;
-width: 40px;
-margin: 0 15px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: contain;
-border: none;
-background-color: transparent;
-
-}
-
-button.next:hover {
-transform: scale(1.2)
-}
-
-button.next:active{
-background-image: url(../assets/images/arrow2.png);
-transform: scale(1.1) 
 }
 
 
@@ -792,79 +739,39 @@ margin-top: 120px;
   display: flex;
   margin: 30px 30px;
   position: absolute;
-  // background-image: url('http://placekitten.com/300/300');
-  perspective: 1400px;
-  border-radius: 15px;
-   
+
 }
 
-.item .preview {
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 5em;
-  display: flex;
-  width: 100%;
-  overflow: clip;
-  text-shadow: 0px 0px 3px black;
-  border-radius: 15px;
-  transform: scale(.85);
-}
 
-.item .caption {
-    color: white;
-    position: absolute;
-    top: 100%;
-    color: black;
-    opacity: 0;
-    margin-top: 20px;
-    width: 200%;
-    left: -50%;
-  transition: all .1s;
-  text-align: justify;
-    /*background: rgba(255,255,255, .2);*/
-}
 
-.item .shadow {
-  // background: linear-gradient(rgba(0,0,0, .2) 0%, rgba(0,0,0, .1));
-  // opacity: .9;
-  // position: absolute;
-  // filter: blur( 35px);
-  // height: 110%;
-  // width: 110%;
-  // transform: translateZ(-307px) translateY(432px) translateX(2px) scale(1.2) rotateX(96deg);
-}
 
 .track .item:nth-of-type(1) {
    position: absolute;
   z-index: -1;
-
-  // background-color: green;
   transform: rotateY(calc(var(--angle) * 3)) translateZ(var(--distance)) translateY(var(--vertical-offset));
 }
 
 .track .item:nth-of-type(2) {
   position: absolute;
   z-index: 1;
-  // background-color: green;
+
   transform: rotateY(calc(var(--angle) * 2)) translateZ(var(--distance))  translateY(var(--vertical-offset));
 }
 
 .track .item:nth-of-type(3) {
    position: absolute;
   z-index: 1;
-  // background-color: green;
+  margin-left: 80px;
   transform: rotateY(calc(var(--angle))) translateZ(var(--distance)) translateY(var(--vertical-offset));
 }
 
 .track .item:nth-of-type(4) {
-   
+   transition: all .3s;
    position: absolute;
   z-index: 1;
     opacity: 1;
-  // background-color: blue;
-  // transform: rotateY(0deg) translateZ(calc(var(--distance) * var(--active-translate-modifier))) translateY(var(--vertical-offset));
-  transform: scale(.9);
+  transform: rotateY(0deg) translateZ(calc(var(--distance ) * var(--active-translate-modifier))) translateY(var(--vertical-offset)) scale(1.09);
+margin: 0px 0px;
 }
 
 .track .item:nth-of-type(4) .caption {
@@ -875,6 +782,7 @@ margin-top: 120px;
 .track .item:nth-of-type(5) {
    position: absolute;
   z-index: 1;
+  margin-right: 80px;
   // background-color: green;
   transform: rotateY(calc(var(--angle) * -1)) translateZ(var(--distance)) translateY(var(--vertical-offset));
 }
@@ -889,7 +797,6 @@ margin-top: 120px;
 .track .item:nth-of-type(7) {
   position: absolute;
   z-index: -1;
-  
   // background-color: green;
   transform: rotateY(calc(var(--angle) * -3)) translateZ(var(--distance)) translateY(var(--vertical-offset));
 }
@@ -958,35 +865,43 @@ margin-top: 120px;
 }
 
 
-#dismissCard {
-  animation: dismissCard 2s ease-in-out  1 normal forwards;   
-  position: relative
-}
 
 
+
+// transform: rotateY(180deg);
+//   transition: transform 1s;
+//   transform-style: preserve-3d;
+//   backface-visibility: visible;
 
 @keyframes dismissCard {
-		0%   {transform: rotateY(0deg);; 
-    }
-    50% {
-      backface-visibility: visible;
-      // transform: rotateY(180deg);
-       
+		0%   {
+top: 0px
+    
     }
     60% {
-      backface-visibility: visible;
-      // transform: rotateY(180deg);
-      top: 0px
+top: -1px;
     }
-    80% {
-       filter: opacity(.5);
-    }
+    99%  {
+    top: -1000px;
+}
     100%  {
-         backface-visibility: visible;
-        //  transform: rotateY(180deg);
-    top: -100px;
-       filter: opacity(0);
-  display: none }
+    top: -10000px;
+}
+}
+
+@keyframes dismissCard2 {
+      0%  {
+    // top: 10000px;
+    opacity: 1;
+}
+ 80%  {
+    opacity: 1;
+}
+100%   {
+// top: 0px;
+    opacity: 1;
+    }
+
 }
 
 @keyframes wave {
@@ -1037,5 +952,3 @@ transform: rotate(0deg);
     opacity: 0;
   }
 }
-
-
